--- a/insights.html
+++ b/insights.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Environmental Insights | Notepad Edition</title>
+    <title>Insights | Spiral Notebook Edition</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body class="notepad-page">
+<body class="notebook-page">
 
     <header class="site-header">
         <div class="header-layout">
@@ -23,80 +23,74 @@
         </div>
     </header>
 
-    <main class="notepad-container">
+    <main class="notebook-container">
         
-        <section class="hero-handwritten">
-            <h1>Field Notes: Environmental Insights</h1>
-            <p>Observations on Karachi's energy crisis and the path to a green future.</p>
+        <section class="notebook-hero">
+            <h1>Field Notes & Environmental Insights</h1>
+            <p>A detailed log of Karachi's carbon footprint and mitigation strategies.</p>
         </section>
 
-        <div class="paper-grid">
+        <div class="spiral-grid">
             
-            <div class="paper-sheet rotate-left">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-flask"></i>
-                </div>
-                <h3>1. Diesel Impact in Karachi</h3>
-                <p>Diesel generators are a primary source of localized air pollution in Karachi. Beyond $CO_2$, these engines release high concentrations of Nitrogen Oxides ($NO_x$), Carbon Monoxide ($CO$), and Particulate Matter ($PM_{2.5}$). These pollutants contribute to the city's seasonal smog and respiratory health issues.</p>
-            </div>
-
-            <div class="paper-sheet rotate-right push-down">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-bolt"></i>
-                </div>
-                <h3>2. The Struggle: Load Shedding</h3>
-                <p>If you live in Karachi, you know the sound of a diesel generator starting during load shedding. It’s a daily reality for fans and water pumps. But these machines breathe out thick carbon smoke that stays in our streets, making the city hotter and the air harder to breathe.</p>
-            </div>
-
-            <div class="paper-sheet rotate-left">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-sun"></i>
-                </div>
-                <h3>3. Solar Offset Method</h3>
-                <p>Solar energy works through displacement. In Karachi, we average 5.5 peak sun hours daily. When a solar PV system provides power, it reduces generator load, leading to a linear reduction in fuel consumption and erasing "carbon debt."</p>
-            </div>
-
-            <div class="paper-sheet rotate-right push-down">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-eye-slash"></i>
-                </div>
-                <h3>4. The Invisible Cost</h3>
-                <p>Burning one liter of diesel is like throwing 2.7kg of invisible trash into the sky. Globally, generators produce 100 million tonnes of $CO_2$ annually. The "environmental price" is paid in rising temperatures and frequent heatwaves.</p>
-            </div>
-
-            <div class="full-paper-width">
-                <div class="global-journal">
-                    <h2>Global Perspective: One Problem, Many Cities</h2>
-                    <p>Load shedding isn't just a Pakistan problem. 770 million people worldwide rely on diesel lifelines. From Lagos to Mumbai, the math is the same. Local action in your backyard helps slow the global temperature rise of 1.1°C.</p>
+            <div class="note-card rotate-L">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #01</span>
+                    <h3>Diesel Power in Urban Karachi</h3>
+                    <p>Diesel generators are a primary source of localized air pollution in Karachi. Beyond $CO_2$, these engines release high concentrations of Nitrogen Oxides ($NO_x$), Carbon Monoxide ($CO$), and Particulate Matter ($PM_{2.5}$). These pollutants contribute significantly to the city's seasonal smog and respiratory health issues. By calculating the carbon footprint of your generator, you are identifying the specific volume of greenhouse gases that must be neutralized.</p>
                 </div>
             </div>
 
-            <div class="paper-sheet rotate-left">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-tree"></i>
+            <div class="note-card rotate-R push-down">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #02</span>
+                    <h3>The Struggle: Load Shedding</h3>
+                    <p>If you live in Karachi, you know the sound of a diesel generator starting up the moment the lights go out. For many, load shedding is a daily reality that forces us to rely on expensive, noisy, and smoky generators just to keep the fans spinning. But while these "big machines" solve our immediate power problem, they create a silent one: they breathe out thick carbon smoke that stays in our streets.</p>
                 </div>
-                <h3>5. Nature’s Technology</h3>
-                <p>While solar stops new emissions, trees remove existing $CO_2$. A mature tree absorbs 22kg of $CO_2$ annually. In Karachi's urban heat island, planting trees provides both carbon sequestration and natural cooling.</p>
             </div>
 
-            <div class="paper-sheet rotate-right push-down">
-                <div class="paper-header">
-                    <span class="red-line"></span>
-                    <i class="fa-solid fa-users-gear"></i>
+            <div class="note-card rotate-L">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #03</span>
+                    <h3>Photovoltaic Offset Methodology</h3>
+                    <p>Solar energy mitigation works through the "displacement" of fossil fuel combustion. In Karachi, we benefit from high solar irradiance, averaging roughly 5.5 peak sun hours daily. When a solar PV system provides power, it reduces the load demand on the diesel generator, leading to a direct, linear reduction in fuel consumption.</p>
                 </div>
-                <h3>6. Cleanup Crew</h3>
-                <p>If every person in Karachi planted just one tree, we could turn the "Grey City" back into a "Green City." It is the simplest way for people to fight climate change without needing an engineering degree.</p>
             </div>
 
-            <div class="full-paper-width">
-                <div class="paper-sheet final-summary">
-                    <h3>Summary: The Path to Net Zero</h3>
-                    <p>Net Zero means balancing emissions with removals. Solar is the first line of defense (reducing the source), while trees bridge the remaining gap. This hybrid strategy ensures a mathematically sound roadmap toward a sustainable lifestyle.</p>
+            <div class="note-card rotate-R push-down">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #04</span>
+                    <h3>The "Invisible" Cost of Diesel</h3>
+                    <p>Did you know that burning just one liter of diesel is like throwing nearly 2.7kg of invisible trash into the sky? On a global level, diesel generators produce about 100 million tonnes of $CO_2$ every year. Most people only see the "fuel price" at the pump, but the "environmental price" is paid in rising temperatures and more frequent heatwaves.</p>
+                </div>
+            </div>
+
+            <div class="full-width-journal">
+                <div class="journal-page">
+                    <div class="spiral-wire-top"></div>
+                    <h2>A Global Perspective: One Problem, Many Cities</h2>
+                    <p>While load shedding is a daily hurdle in Pakistan, nearly 770 million people worldwide live without reliable access to electricity. From the crowded streets of Lagos, Nigeria, to the outskirts of Mumbai, India, millions rely on diesel. Your local action helps slow down this global "fever" of 1.1°C temperature rise.</p>
+                </div>
+            </div>
+
+            <div class="note-card rotate-L">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #05</span>
+                    <h3>Urban Trees: Nature’s Technology</h3>
+                    <p>While solar panels prevent new emissions, trees remove existing $CO_2$ from the air. Through photosynthesis, a mature tree absorbs an average of 22kg of $CO_2$ annually. In an urban heat island like Karachi, planting trees provides the dual benefit of carbon sequestration and natural cooling, helping to lower local temperatures.</p>
+                </div>
+            </div>
+
+            <div class="note-card rotate-R push-down">
+                <div class="spiral-wire"></div>
+                <div class="note-content">
+                    <span class="date-stamp">LOG #06</span>
+                    <h3>The Path to Net Zero</h3>
+                    <p>Achieving "Net Zero" means your greenhouse gases emitted are perfectly balanced by those removed. Solar energy is the first line of defense—reducing the "source" of the pollution. For the remaining energy, trees bridge the gap. This hybrid approach ensures a mathematically sound roadmap toward a sustainable lifestyle.</p>
                 </div>
             </div>
 
@@ -104,108 +98,97 @@
     </main>
 
     <style>
-        /* Backdrop: Textured Desk Look */
-        .notepad-page {
-            background-color: #e5e5e5;
-            background-image: radial-gradient(#d1d1d1 1px, transparent 0);
-            background-size: 40px 40px; /* Subtle dot-grid desk background */
-            color: #444;
+        /* Backdrop: Dark Desk to reduce Whiteness */
+        .notebook-page {
+            background-color: #2c3e50;
+            background-image: linear-gradient(rgba(0,0,0,0.1) 1px, transparent 1px), 
+                              linear-gradient(90deg, rgba(0,0,0,0.1) 1px, transparent 1px);
+            background-size: 50px 50px;
+            color: #333;
             margin: 0;
-            padding-bottom: 100px;
+            font-family: 'Segoe UI', sans-serif;
         }
 
-        .notepad-container {
-            max-width: 1300px;
+        .notebook-container {
+            max-width: 1400px;
             margin: 0 auto;
             padding: 40px;
         }
 
-        .hero-handwritten h1 {
-            font-family: 'Segoe UI', sans-serif;
-            font-weight: 800;
-            color: #1a5e38;
-            font-size: 3.5rem;
-            text-align: left;
-            margin-bottom: 40px;
+        .notebook-hero {
+            color: #fff;
+            border-left: 8px solid #2ecc71;
+            padding-left: 20px;
+            margin-bottom: 60px;
         }
 
-        /* The Grid */
-        .paper-grid {
+        .notebook-hero h1 { font-size: 3.5rem; margin: 0; }
+
+        .spiral-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 50px;
-            align-items: start;
+            gap: 60px;
         }
 
-        /* The Paper Sheet Shape */
-        .paper-sheet {
+        /* The Note Card */
+        .note-card {
             background: #fff;
-            padding: 40px;
-            min-height: 250px;
-            box-shadow: 5px 5px 20px rgba(0,0,0,0.1);
-            position: relative;
-            border-bottom-right-radius: 50px 5px; /* Subtle page curl effect */
-            transition: transform 0.3s ease;
-        }
-
-        .paper-header {
             display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 10px;
+            min-height: 300px;
+            box-shadow: 10px 10px 30px rgba(0,0,0,0.3);
+            border-radius: 5px;
+            position: relative;
+            transition: 0.3s;
         }
 
-        .red-line {
-            width: 4px;
-            height: 30px;
-            background: #ff4d4d;
-            display: inline-block;
+        /* The Spiral Wire CSS */
+        .spiral-wire {
+            width: 40px;
+            background: #eee;
+            border-right: 2px solid #ddd;
+            position: relative;
+            background-image: radial-gradient(#555 5px, transparent 6px);
+            background-size: 100% 30px;
+            background-position: center;
         }
 
-        .paper-sheet i { color: #27ae60; font-size: 1.5rem; }
-
-        /* Staggered Rotations */
-        .rotate-left { transform: rotate(-1.5deg); }
-        .rotate-right { transform: rotate(1.2deg); }
-        .push-down { margin-top: 60px; }
-
-        .paper-sheet:hover {
-            transform: rotate(0deg) scale(1.03);
-            z-index: 10;
+        .spiral-wire::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 15px;
+            width: 30px;
+            height: 100%;
+            background-image: linear-gradient(transparent 10px, #888 12px, #333 15px, #888 18px, transparent 20px);
+            background-size: 100% 30px;
+            z-index: 5;
         }
 
-        .paper-sheet h3 {
-            color: #1a5e38;
-            font-size: 1.5rem;
-            margin-top: 0;
-        }
+        .note-content { padding: 30px; flex: 1; }
+        .date-stamp { font-weight: bold; color: #2ecc71; font-size: 0.8rem; border-bottom: 1px solid #2ecc71; }
+        .note-content h3 { margin-top: 15px; color: #1a5e38; }
 
-        /* Wide Journal Section */
-        .full-paper-width {
+        /* Rotations */
+        .rotate-L { transform: rotate(-1.2deg); }
+        .rotate-R { transform: rotate(1.5deg); }
+        .push-down { margin-top: 80px; }
+        .note-card:hover { transform: rotate(0deg) scale(1.02); z-index: 10; }
+
+        /* Full Width Journal Page */
+        .full-width-journal {
             grid-column: span 2;
             margin: 60px 0;
         }
 
-        .global-journal {
+        .journal-page {
             background: #fdfdfd;
-            border-left: 10px solid #1a5e38;
-            padding: 50px;
-            box-shadow: 10px 10px 30px rgba(0,0,0,0.08);
+            padding: 60px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+            border-top: 15px solid #1a5e38;
         }
 
-        .final-summary {
-            background: #1a5e38;
-            color: white;
-            text-align: center;
-        }
-
-        .final-summary h3 { color: #fff; }
-
-        /* Responsive */
-        @media (max-width: 900px) {
-            .paper-grid { grid-template-columns: 1fr; }
-            .full-paper-width { grid-column: span 1; }
+        @media (max-width: 1000px) {
+            .spiral-grid { grid-template-columns: 1fr; }
+            .full-width-journal { grid-column: span 1; }
             .push-down { margin-top: 0; }
         }
     </style>
