--- a/insights.html
+++ b/insights.html
@@ -1,200 +1,201 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theory & Insights | Technical Folio</title>
-    <style>
-        :root {
-            --primary-green: #1e8449;
-            --paper-white: #ffffff;
-            --bg-workspace: #f8faf9;
-            --grid-line: #e2e8f0;
-        }
-
-        body {
-            background-color: var(--bg-workspace);
-            /* Engineering blueprint grid */
-            background-image: linear-gradient(var(--grid-line) 1px, transparent 1px),
-                              linear-gradient(90deg, var(--grid-line) 1px, transparent 1px);
-            background-size: 40px 40px;
-            font-family: 'Segoe UI', Tahoma, sans-serif;
-            margin: 0;
-            color: #2d3436;
-        }
-
-        .wrapper {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 80px 40px;
-        }
-
-        .section-title {
-            margin-bottom: 80px;
-            text-align: left;
-            border-bottom: 2px solid var(--primary-green);
-            display: inline-block;
-            padding-right: 50px;
-        }
-
-        .section-title h1 {
-            font-size: 3rem;
-            color: var(--primary-green);
-            margin: 0;
-            text-transform: uppercase;
-            letter-spacing: -1px;
-        }
-
-        /* 3-Column Diagonal Scattering */
-        .folio-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 35px;
-            align-items: start;
-        }
-
-        /* The Notebook Shape */
-        .folio-card {
-            background: var(--paper-white);
-            display: flex;
-            min-height: 240px;
-            box-shadow: 12px 12px 2px rgba(0, 0, 0, 0.02); /* Flat architectural shadow */
-            border: 1px solid #dcdde1;
-            position: relative;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
-
-        /* Minimalist Professional Spiral */
-        .spiral-spine {
-            width: 35px;
-            background: #f1f2f6;
-            border-right: 1px solid #dcdde1;
-            position: relative;
-            background-image: radial-gradient(#2f3640 3px, transparent 4px);
-            background-size: 100% 22px;
-            background-position: center;
-        }
-
-        .spiral-spine::after {
-            content: "";
-            position: absolute;
-            top: 0; left: 10px;
-            width: 20px;
-            height: 100%;
-            /* Sophisticated dark metallic spiral */
-            background-image: linear-gradient(transparent 6px, #7f8c8d 8px, #2c3e50 11px, #7f8c8d 14px, transparent 16px);
-            background-size: 100% 22px;
-        }
-
-        .content { padding: 25px; flex: 1; }
-
-        .folio-id {
-            font-size: 0.65rem;
-            font-weight: 900;
-            color: #95a5a6;
-            text-transform: uppercase;
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        .content h3 {
-            margin: 0 0 10px 0;
-            font-size: 1.2rem;
-            color: var(--primary-green);
-            line-height: 1.2;
-        }
-
-        .content p {
-            font-size: 0.88rem;
-            line-height: 1.6;
-            color: #4b4b4b;
-        }
-
-        /* Staggered Diagonal Positioning */
-        .diag-1 { transform: rotate(-1.5deg); margin-top: 0; }
-        .diag-2 { transform: rotate(2deg); margin-top: 60px; }
-        .diag-3 { transform: rotate(-1deg); margin-top: 120px; }
-        
-        .diag-4 { transform: rotate(1.2deg); margin-top: -20px; }
-        .diag-5 { transform: rotate(-2.5deg); margin-top: 40px; }
-        .diag-6 { transform: rotate(0.8deg); margin-top: 100px; }
-
-        .folio-card:hover {
-            transform: rotate(0deg) translateY(-15px) scale(1.02);
-            box-shadow: 20px 20px 0px rgba(39, 174, 96, 0.05);
-            z-index: 10;
-            border-color: var(--primary-green);
-        }
-
-        @media (max-width: 1000px) {
-            .folio-grid { grid-template-columns: 1fr 1fr; }
-            .diag-3, .diag-6 { margin-top: 0; }
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Theoretical Insights - Sustainable Energy and Urban Green Mitigation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
-    <main class="wrapper">
-        <header class="section-title">
-            <h1>Theoretical Insights</h1>
-        </header>
+<body class="theme-green insights-layout">
+  
+  <header class="site-header">
+    <div class="container header-layout">
+      <div class="logo-box">
+        <img src="logo.png" alt="CO2 Logo" class="header-logo">
+      </div>
 
-        <div class="folio-grid">
-            <article class="folio-card diag-1">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 001</span>
-                    <h3>Diesel Combustion Mechanics</h3>
-                    <p>Analysis of decentralized diesel generators reveals a direct output of $CO_2$, $NO_x$, and $PM_{2.5}$, which significantly degrades localized air quality in Karachi.</p>
-                </div>
-            </article>
+      <div class="brand-title">
+        <h1>Sustainable Energy & Urban Green Mitigation</h1>
+        <p>Developed by Engr. Azhan Ahmed</p>
+      </div>
 
-            <article class="folio-card diag-2">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 002</span>
-                    <h3>The Load Shedding Energy Gap</h3>
-                    <p>Grid instability forces a shift to carbon-intensive backup power. This systemic energy gap is the primary driver for decentralized emission growth in urban centers.</p>
-                </div>
-            </article>
+      <nav class="cool-nav">
+        <a href="index.html" class="nav-item">
+          <i class="fa-solid fa-house"></i>
+          <span>Home</span>
+        </a>
+        <a href="calculator.html" class="nav-item">
+          <i class="fa-solid fa-calculator"></i>
+          <span>Calculator</span>
+        </a>
+        <a href="theory.html" class="nav-item">
+          <i class="fa-solid fa-book"></i>
+          <span>Theory</span>
+        </a>
+        <a href="insights.html" class="nav-item active">
+          <div class="active-circle"><i class="fa-solid fa-lightbulb"></i></div>
+          <span>Insights</span>
+        </a>
+        <a href="trees.html" class="nav-item">
+          <i class="fa-solid fa-tree"></i>
+          <span>Trees</span>
+        </a>
+        <a href="about.html" class="nav-item">
+          <i class="fa-solid fa-user"></i>
+          <span>About</span>
+        </a>
+      </nav>
+    </div>
+  </header>
 
-            <article class="folio-card diag-3">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 003</span>
-                    <h3>Photovoltaic Displacement Logic</h3>
-                    <p>Solar energy integration functions by displacing the thermal load of generators. With Karachi's 5.5 peak sun hours, the carbon debt reduction is calculated linearly.</p>
-                </div>
-            </article>
+  <main class="container folio-wrapper">
+    <header class="folio-header">
+      <h2>Theoretical Insights</h2>
+      <p>Scientific displacement logic and mitigation frameworks.</p>
+    </header>
 
-            <article class="folio-card diag-4">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 004</span>
-                    <h3>Biological Carbon Sequestration</h3>
-                    <p>A mature tree acts as a biological carbon sink, absorbing approximately 22kg of $CO_2$ annually through the natural process of photosynthesis.</p>
-                </div>
-            </article>
-
-            <article class="folio-card diag-5">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 005</span>
-                    <h3>Urban Heat Mitigation</h3>
-                    <p>Strategic urban forestry counteracts the "Urban Heat Island" effect, providing localized cooling through evapotranspiration and shaded surface areas.</p>
-                </div>
-            </article>
-
-            <article class="folio-card diag-6">
-                <div class="spiral-spine"></div>
-                <div class="content">
-                    <span class="folio-id">Folio No. 006</span>
-                    <h3>Net Zero Mathematical Roadmap</h3>
-                    <p>The path to carbon neutrality is a hybrid balance: aggressive source reduction via Solar PV combined with biological removal via Urban Forestry.</p>
-                </div>
-            </article>
+    <div class="folio-grid">
+      <article class="folio-card diag-L">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 001</span>
+          <h3>Diesel Combustion Mechanics</h3>
+          <p>Analysis of decentralized diesel generators reveals a direct output of $CO_2$, $NO_x$, and $PM_{2.5}$, significantly degrading localized air quality in Karachi.</p>
         </div>
-    </main>
+      </article>
 
+      <article class="folio-card diag-R push-mid">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 002</span>
+          <h3>The Energy Gap Crisis</h3>
+          <p>Grid instability forces a shift to carbon-intensive backup power. This systemic energy gap is the primary driver for decentralized emission growth.</p>
+        </div>
+      </article>
+
+      <article class="folio-card diag-L push-end">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 003</span>
+          <h3>Photovoltaic Displacement</h3>
+          <p>Solar integration functions by displacing thermal loads. With Karachi's 5.5 peak sun hours, carbon debt reduction is calculated linearly.</p>
+        </div>
+      </article>
+
+      <article class="folio-card diag-R">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 004</span>
+          <h3>Biological Sequestration</h3>
+          <p>A mature tree acts as a biological carbon sink, absorbing approximately 22kg of $CO_2$ annually through photosynthesis.</p>
+        </div>
+      </article>
+      
+      <article class="folio-card diag-L push-mid">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 005</span>
+          <h3>Urban Heat Mitigation</h3>
+          <p>Strategic urban forestry counteracts the "Urban Heat Island" effect, providing cooling through evapotranspiration.</p>
+        </div>
+      </article>
+
+      <article class="folio-card diag-R push-end">
+        <div class="spiral-spine"></div>
+        <div class="folio-body">
+          <span class="folio-tag">Folio No. 006</span>
+          <h3>Net Zero Methodology</h3>
+          <p>A zero-sum balance is achieved through aggressive source reduction (Solar) combined with atmospheric removal (Urban Forestry).</p>
+        </div>
+      </article>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>Department of Civil Engineering • NED University of Engineering and Technology • Project by Group (Engr Azhan Ahmed & team)</p>
+    </div>
+  </footer>
+
+  <style>
+    /* Architectural Background matching your theme */
+    .insights-layout {
+      background-color: #fdfdfd;
+      background-image: linear-gradient(#e0e0e0 1px, transparent 1px),
+                        linear-gradient(90deg, #e0e0e0 1px, transparent 1px);
+      background-size: 40px 40px;
+    }
+
+    .folio-wrapper { padding: 60px 20px; }
+
+    .folio-header {
+      margin-bottom: 60px;
+      border-left: 5px solid #2ecc71;
+      padding-left: 20px;
+    }
+
+    .folio-header h2 { color: #004d40; font-size: 2.5rem; margin: 0; }
+
+    /* The 3-Column Grid for Screen Consumption */
+    .folio-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+      align-items: start;
+    }
+
+    .folio-card {
+      background: #ffffff;
+      display: flex;
+      min-height: 220px;
+      border: 1px solid #e0e0e0;
+      box-shadow: 8px 8px 0px rgba(0,0,0,0.02);
+      transition: all 0.3s ease;
+      position: relative;
+    }
+
+    /* Minimalist Spiral Spine */
+    .spiral-spine {
+      width: 32px;
+      background: #f7f7f7;
+      border-right: 1px solid #ddd;
+      background-image: radial-gradient(#333 3px, transparent 4px);
+      background-size: 100% 22px;
+      background-position: center;
+    }
+
+    .spiral-spine::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 8px; width: 20px; height: 100%;
+      background-image: linear-gradient(transparent 6px, #999 8px, #333 11px, #999 14px, transparent 16px);
+      background-size: 100% 22px;
+    }
+
+    .folio-body { padding: 25px; flex: 1; }
+    .folio-tag { font-size: 0.7rem; font-weight: bold; color: #2ecc71; display: block; margin-bottom: 8px; }
+    .folio-body h3 { font-size: 1.2rem; color: #004d40; margin-bottom: 10px; line-height: 1.2; }
+    .folio-body p { font-size: 0.9rem; color: #555; line-height: 1.6; }
+
+    /* Diagonal Staggering */
+    .diag-L { transform: rotate(-1.5deg); }
+    .diag-R { transform: rotate(1.5deg); }
+    .push-mid { margin-top: 50px; }
+    .push-end { margin-top: 100px; }
+
+    .folio-card:hover {
+      transform: rotate(0deg) translateY(-10px);
+      box-shadow: 15px 15px 25px rgba(0,0,0,0.08);
+      z-index: 10;
+      border-color: #2ecc71;
+    }
+
+    @media (max-width: 1100px) {
+      .folio-grid { grid-template-columns: 1fr 1fr; }
+      .push-end { margin-top: 0; }
+    }
+  </style>
 </body>
 </html>
