--- a/insights.html
+++ b/insights.html
@@ -12,16 +12,13 @@
   
   <header class="site-header">
     <div class="container header-layout">
-      
       <div class="logo-box">
         <img src="logo.png" alt="CO2 Logo" class="header-logo">
       </div>
-
       <div class="brand-title">
         <h1>Sustainable Energy & Urban Green Mitigation</h1>
         <p>Developed by Engr. Azhan Ahmed</p>
       </div>
-
       <nav class="cool-nav">
         <a href="index.html">Home</a>
         <a href="calculator.html">Calculator</a>
@@ -30,67 +27,66 @@
         <a href="trees.html">Trees</a>
         <a href="about.html">About</a>
       </nav>
-      
     </div>
   </header>
 
-  <main class="container folio-wrapper">
-    <header class="folio-intro">
+  <main class="container notebook-container">
+    <header class="page-intro">
       <h2>Theoretical Insights</h2>
-      <p>Technical documentation regarding carbon displacement and mitigation frameworks.</p>
+      <p>Exploring the synergy between renewable energy and urban nature.</p>
     </header>
 
-    <div class="folio-grid">
-      <article class="folio-card diag-L">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 001</span>
+    <div class="notebook-grid">
+      <article class="notebook-paper diag-L">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-leaf"></i></div>
           <h3>Diesel Combustion Mechanics</h3>
-          <p>Analysis of decentralized diesel generators reveals a direct output of $CO_2$, $NO_x$, and $PM_{2.5}$, which significantly degrades localized air quality in Karachi.</p>
+          <p>Analysis of decentralized diesel generators reveals a direct output of $CO_2$, $NO_x$, and $PM_{2.5}$, significantly impacting Karachi's local air quality.</p>
         </div>
       </article>
 
-      <article class="folio-card diag-R push-mid">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 002</span>
-          <h3>The Load Shedding Energy Gap</h3>
-          <p>Grid instability forces a shift to carbon-intensive backup power. This systemic energy gap is the primary driver for decentralized emission growth in urban centers.</p>
+      <article class="notebook-paper diag-R push-1">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-bolt"></i></div>
+          <h3>The Energy Gap Crisis</h3>
+          <p>Grid instability forces a shift to carbon-intensive backup power. This energy gap is the primary driver for decentralized emission growth in urban centers.</p>
         </div>
       </article>
 
-      <article class="folio-card diag-L push-end">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 003</span>
-          <h3>Photovoltaic Displacement Logic</h3>
-          <p>Solar energy integration functions by displacing the thermal load of generators. With Karachi's 5.5 peak sun hours, the carbon debt reduction is calculated linearly.</p>
+      <article class="notebook-paper diag-L push-2">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-sun"></i></div>
+          <h3>Photovoltaic Displacement</h3>
+          <p>Solar energy integration works by displacing the thermal load of generators. Karachi's 5.5 peak sun hours allow for direct linear carbon debt reduction.</p>
         </div>
       </article>
 
-      <article class="folio-card diag-R">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 004</span>
-          <h3>Biological Carbon Sequestration</h3>
+      <article class="notebook-paper diag-R">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-seedling"></i></div>
+          <h3>Biological Sequestration</h3>
           <p>A mature tree acts as a biological carbon sink, absorbing approximately 22kg of $CO_2$ annually through the natural process of photosynthesis.</p>
         </div>
       </article>
 
-      <article class="folio-card diag-L push-mid">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 005</span>
+      <article class="notebook-paper diag-L push-1">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-wind"></i></div>
           <h3>Urban Heat Mitigation</h3>
-          <p>Strategic urban forestry counteracts the "Urban Heat Island" effect, providing localized cooling through evapotranspiration and shaded surface areas.</p>
+          <p>Strategic urban forestry counteracts the "Urban Heat Island" effect, providing cooling through evapotranspiration and shaded surface areas.</p>
         </div>
       </article>
 
-      <article class="folio-card diag-R push-end">
-        <div class="spiral-spine"></div>
-        <div class="folio-content">
-          <span class="folio-no">FOLIO NO. 006</span>
-          <h3>Net Zero Mathematical Roadmap</h3>
+      <article class="notebook-paper diag-R push-2">
+        <div class="spiral-rings"></div>
+        <div class="paper-body">
+          <div class="topic-leaf"><i class="fa-solid fa-chart-line"></i></div>
+          <h3>Net Zero Methodology</h3>
           <p>The path to carbon neutrality is a hybrid balance: aggressive source reduction via Solar PV combined with biological removal via Urban Forestry.</p>
         </div>
       </article>
@@ -104,87 +100,81 @@
   </footer>
 
   <style>
-    /* Architectural Workspace Background */
+    /* Healthy, Clean Workspace Background */
     .insights-layout {
-      background-color: #f8faf9;
-      background-image: linear-gradient(#e2e8f0 1px, transparent 1px),
-                        linear-gradient(90deg, #e2e8f0 1px, transparent 1px);
-      background-size: 45px 45px;
+      background-color: #f0f4f2; /* Soft mint-grey */
+      background-image: radial-gradient(#d1dbd5 1.5px, transparent 1.5px);
+      background-size: 35px 35px;
     }
 
-    .folio-wrapper { padding: 80px 20px; }
+    .notebook-container { padding: 60px 20px; position: relative; }
 
-    .folio-intro {
-        margin-bottom: 60px;
-        border-left: 6px solid #2ecc71;
-        padding-left: 20px;
+    .page-intro {
+      margin-bottom: 50px;
+      text-align: left;
     }
 
-    .folio-intro h2 { color: #004d40; font-size: 2.8rem; margin: 0; }
+    .page-intro h2 { color: #1a5e38; font-size: 2.5rem; margin-bottom: 5px; }
+    .page-intro p { color: #666; font-style: italic; }
 
-    /* The 3-Column Diagonal Scattering Grid */
-    .folio-grid {
+    /* 3-Column Diagonal Scattering */
+    .notebook-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 40px;
       align-items: start;
     }
 
-    .folio-card {
+    /* Modern Paper Shape */
+    .notebook-paper {
       background: #ffffff;
       display: flex;
-      min-height: 250px;
-      border: 1px solid #dcdde1;
-      box-shadow: 10px 10px 0px rgba(0,0,0,0.02);
-      transition: all 0.4s ease;
-      position: relative;
+      min-height: 240px;
+      border-radius: 4px;
+      box-shadow: 12px 12px 30px rgba(0, 0, 0, 0.04);
+      border: 1px solid rgba(0,0,0,0.05);
+      transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      overflow: hidden;
     }
 
-    /* Professional Spiral/Notebook Binding */
-    .spiral-spine {
-      width: 35px;
-      background: #f1f2f6;
-      border-right: 1px solid #dcdde1;
-      position: relative;
-      background-image: radial-gradient(#2f3640 3px, transparent 4px);
-      background-size: 100% 24px;
+    /* Healthy Spiral Effect */
+    .spiral-rings {
+      width: 38px;
+      background: #f9fbf9;
+      border-right: 1px solid #edf2ef;
+      background-image: radial-gradient(#2ecc71 4px, transparent 5px);
+      background-size: 100% 28px;
       background-position: center;
     }
 
-    .spiral-spine::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 10px; width: 20px; height: 100%;
-      background-image: linear-gradient(transparent 7px, #7f8c8d 9px, #2c3e50 12px, #7f8c8d 15px, transparent 17px);
-      background-size: 100% 24px;
+    /* Soft Green Icons to match "Healthy" theme */
+    .topic-leaf {
+      color: #2ecc71;
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      opacity: 0.7;
     }
 
-    .folio-content { padding: 30px; flex: 1; }
-    .folio-no { font-size: 0.7rem; font-weight: 900; color: #2ecc71; letter-spacing: 1px; display: block; margin-bottom: 10px; }
-    .folio-content h3 { font-size: 1.3rem; color: #004d40; margin-bottom: 12px; line-height: 1.2; }
-    .folio-content p { font-size: 0.9rem; color: #4b4b4b; line-height: 1.6; }
+    .paper-body { padding: 25px; flex: 1; }
+    .paper-body h3 { color: #1a5e38; font-size: 1.25rem; margin-bottom: 10px; }
+    .paper-body p { color: #555; font-size: 0.92rem; line-height: 1.6; }
 
-    /* Diagonal Staggering Classes */
-    .diag-L { transform: rotate(-1.5deg); }
-    .diag-R { transform: rotate(1.8deg); }
-    .push-mid { margin-top: 60px; }
-    .push-end { margin-top: 120px; }
+    /* Diagonal Positions */
+    .diag-L { transform: rotate(-1.2deg); }
+    .diag-R { transform: rotate(1.5deg); }
+    .push-1 { margin-top: 50px; }
+    .push-2 { margin-top: 100px; }
 
-    .folio-card:hover {
-      transform: rotate(0deg) translateY(-12px);
-      box-shadow: 20px 20px 40px rgba(0,0,0,0.06);
-      z-index: 10;
+    /* Hover "Healthy" Effect */
+    .notebook-paper:hover {
+      transform: rotate(0deg) translateY(-10px);
+      box-shadow: 0 15px 35px rgba(46, 204, 113, 0.15); /* Greenish soft shadow */
       border-color: #2ecc71;
     }
 
-    /* Responsive adjustments */
-    @media (max-width: 1100px) {
-      .folio-grid { grid-template-columns: 1fr 1fr; }
-      .push-end { margin-top: 0; }
-    }
-    @media (max-width: 768px) {
-      .folio-grid { grid-template-columns: 1fr; }
-      .push-mid { margin-top: 0; }
+    @media (max-width: 1000px) {
+      .notebook-grid { grid-template-columns: 1fr 1fr; }
+      .push-2 { margin-top: 0; }
     }
   </style>
 </body>
